SELC-4720 feature: added originId mapping using ivassCode (#294)