@@ -12,7 +12,6 @@ import org.mapstruct.Named;
 
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface OnboardingMapper {
@@ -42,6 +41,9 @@ public interface OnboardingMapper {
                 .map(InstitutionPaSubunitType::valueOf)
                 .orElse(null));
         institution.setOrigin(Optional.ofNullable(onboardingData.getOrigin()).map(Origin::fromValue).orElse(null));
+        if(Objects.nonNull(onboardingData.getOriginId())) {
+            institution.setOriginId(onboardingData.getOriginId());
+        }
         if(Objects.nonNull(onboardingData.getLocation())) {
             institution.setCity(onboardingData.getLocation().getCity());
             institution.setCountry(onboardingData.getLocation().getCountry());
@@ -54,7 +56,7 @@ public interface OnboardingMapper {
         institution.geographicTaxonomies(Optional.ofNullable(onboardingData.getInstitutionUpdate().getGeographicTaxonomies())
                 .map(geotaxes -> geotaxes.stream()
                         .map(this::toGeographicTaxonomyDto)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .orElse(null));
         institution.rea(onboardingData.getInstitutionUpdate().getRea());
         institution.shareCapital(onboardingData.getInstitutionUpdate().getShareCapital());
@@ -77,6 +79,9 @@ public interface OnboardingMapper {
                 .orElse(null));
 
         institutionPsp.setOrigin(Optional.ofNullable(onboardingData.getOrigin()).map(Origin::fromValue).orElse(null));
+        if(Objects.nonNull(onboardingData.getOriginId())) {
+            institutionPsp.setOriginId(onboardingData.getOriginId());
+        }
         if(Objects.nonNull(onboardingData.getLocation())) {
             institutionPsp.setCity(onboardingData.getLocation().getCity());
             institutionPsp.setCountry(onboardingData.getLocation().getCountry());
@@ -89,7 +94,7 @@ public interface OnboardingMapper {
         institutionPsp.geographicTaxonomies(Optional.ofNullable(onboardingData.getInstitutionUpdate().getGeographicTaxonomies())
                 .map(geotaxes -> geotaxes.stream()
                     .map(this::toGeographicTaxonomyDto)
-                    .collect(Collectors.toList()))
+                    .toList())
                 .orElse(null));
         institutionPsp.rea(onboardingData.getInstitutionUpdate().getRea());
         institutionPsp.shareCapital(onboardingData.getInstitutionUpdate().getShareCapital());
